--- a/pages/contact.html
+++ b/pages/contact.html
@@ -544,8 +544,8 @@ margin:0% 3%;
         <div class="section">
           <div style="text-align: center;">
             <img src="../images/mail.jpeg" alt="STS-IoT Logo" height="150">
-            <p>Conference Secretary of STS-IoT</p>
-            <p>Email: <a href="ai.iot@neu.edu.tr">ai.iot@neu.edu.tr</a></p>
+            <p>Conference Secretary of SIOT 2023</p>
+            <p style="padding-bottom: 50px;">Email: <a href="mercel.vubangsi@aiiot.website">mercel.vubangsi@aiiot.website</a></p>
           </div>
         </div>
 
