--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -547,7 +547,11 @@ margin:0% 3%;
 
 
 
-    <main>
+<br>
+    <main style="margin-right: 30px; margin-left: 30px; background-color: #f9f9f9; border-radius: 20px; padding: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+      <div class="contenwt">
+        <div class="sectionw" >
+          <div class="sesionw1" >
 
       
           <div class="content">
