--- a/pages/program.html
+++ b/pages/program.html
@@ -440,6 +440,7 @@ margin:0% 3%;
       <a href="../index.html" class="active">Home</a>
    
       <a href="pastconference.html">Past Conference</a>
+      <a href="committees.html">Committees</a>
      
       <a href="registration.html">Registration</a>
       
