--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ margin:0% 3%;
 
       <div class="content">
 
-        <h2 style=" font-weight: 400;text-align: center;font-size: 34px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Welcome to STS-IoT 2023</h2>
+        <h2 style=" font-weight: 400;text-align: center;font-size: 34px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Welcome to SIoT 2023</h2>
         <div class="section" >
 
           
