--- a/pages/contact.html
+++ b/pages/contact.html
@@ -544,12 +544,12 @@ margin:0% 3%;
       <div class="content">
         <div class="section">
           <div style="text-align: center;">
-            <img src="../images/mail.jpeg" alt="STS-IoT Logo" height="150">
-            <p>Conference Secretary of SIOT 2023</p>
-            <p style="padding-bottom: 50px;">Email: <a href="mercel.vubangsi@aiiot.website">mercel.vubangsi@aiiot.website</a></p>
+            <img src="../images/mail.jpeg" alt="STS-IoT Logo" height="50">
+            <p style=" font-weight: 400;text-align: center;font-size: 24px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Conference Secretary of SIOT 2023</p>
+            <p style="padding-bottom: 50px;font-family: Arial, Helvetica, sans-serif;"><i class="fa fa-link" aria-hidden="true"></i>    <a href="mailto:mercel.vubangsi@aiiot.website">mercel.vubangsi@aiiot.website</a></p>
           </div>
         </div>
-
+     
       </div>
     </main>
     <footer>
