--- a/pages/keynote.html
+++ b/pages/keynote.html
@@ -548,7 +548,7 @@ margin:0% 3%;
 
 <div class="content">
 
-  <h2 style=" font-weight: 400;text-align: center;font-size: 34px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Keynote speakers</h2>
+  <h2 style=" margin-left:45%;font-weight: 350;font-size: 24px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Keynote speakers</h2>
   <div class="section" >
 
     
@@ -563,8 +563,8 @@ margin:0% 3%;
 
    
 
-    <p class="shifted" style="text-align: justify;font-family: Arial, Helvetica, sans-serif;text-align:center;">
-      Comming soon ...</p>
+    <p class="shifted" style="color:#666666;text-align: justify;font-family: Arial, Helvetica, sans-serif;text-align:center;">
+      <i class="fa fa-clock-o" aria-hidden="true"></i>   Comming soon ...</p>
 
 
 
@@ -580,6 +580,7 @@ margin:0% 3%;
 
     
     </main>
+    <br>  <br>  <br>
  <!--FONT AWESOME-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
