--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -427,6 +427,11 @@ text-align:left;
 margin:0% 3%;
 }
 }
+
+p,li{
+
+font-family: Arial, Helvetica, sans-serif;color: #666666;
+}
     </style>
   </head>
   <body>
@@ -549,20 +554,20 @@ margin:0% 3%;
 
 
 <br>
-    <main style="margin-right: 30px; margin-left: 30px; background-color: #f9f9f9; border-radius: 20px; padding: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+    <main style="margin-right: 30px; margin-left: 30px; border-radius: 20px; padding: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
       <div class="contenwt">
         <div class="sectionw" >
           <div class="sesionw1" >
 
       
           <div class="content">
-            <div class="section" style="text-align: center; margin-bottom: 0px;"><h1>Conference Schedule</h1></div>
+            <div class="section" style=" font-weight: 400;text-align: center;font-size: 24px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;"><h2>Conference Schedule</h2></div>
           </div>
       <div class="content">
         <div class="section">
-          <h2>Oral Pres​entation Instruction</h2>
+          <h2 style=" font-weight: 400;font-size: 24px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Oral Pres​entation Instruction</h2><br>
           <p>
-            <ol>
+            <ol style="text-align:justify;font-family:  Arial, Helvetica, sans-serif;line-height: 30px;">
               <li>
                 Timing: A maximum of 15 minutes total, including speaking time and discussion. Please make sure your presentation is well timed. Please keep in mind that the program is full and that the speaker after you would like their allocated time available to them.
               </li>
@@ -586,11 +591,11 @@ margin:0% 3%;
 
 
  
-        </div>
+        </div><br>
         <div class="section">
-          <h2>Poster Presentation Instruction</h2>
+          <h2 style=" font-weight: 400;font-size: 24px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Poster Presentation Instruction</h2><br>
           <p>
-            <ol>
+            <ol style="text-align:justify;font-family:  Arial, Helvetica, sans-serif;line-height: 30px;">
               <li>Maximum poster size is 0.8 meter wide by 1 meter high.</li>
               <li>Posters are required to be condensed and attractive. The characters should be large enough so that they are visible from 1 meter apart.</li>
               <li>Please note that during your poster session, the author should stay by your poster paper to explain and discuss your paper with visiting delegates.</li>
