--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,9 @@ margin:0% 3%;
            
 
             <br> 
+            <p class="shifted" style="text-align: justify;font-family: Arial, Helvetica, sans-serif;">
+              Join us at this prestigious event that unites global experts, researchers, and industry professionals to explore IoT advancements and innovations. Collaborate, exchange knowledge, and engage in thought-provoking discussions on the transformative power of IoT. From smart cities to healthcare and beyond, our conference covers diverse topics shaping the IoT future. Keynote speakers and panelists will share insights on trends and prospects, offering valuable perspectives on interconnected devices, data analytics, and security. Network with industry leaders, establish collaborations, and forge lasting relationships. Be an active participant in shaping the future of the Smart Internet of Things. Explore, unravel, and embrace IoT's transformative potential with us.
+            </p><br>
 
           <p class="shifted" style="text-align: justify;font-family: Arial, Helvetica, sans-serif;">
 
