--- a/pages/submission.html
+++ b/pages/submission.html
@@ -974,7 +974,7 @@ The final version of a paper must be 5-6 pages and be prepared according to the 
 
   <i style="font-weight: bold;">  The corresponding author(s) of the accepted paper(s) will receive the information regarding payment method for registration via email at the time of acceptance notification.
 <br>
-    Other prospective participants can send email at <spann style="color:#6b0b5d"> <a href="mailto:mercel.vubangsi@aiiot.website" style="color:#666"> mercel.vubangsi@aiiot.website </a> </spann>  to get payment information.
+    Other prospective participants can send email at <spann style="color:#6b0b5d"> <a href="mailto:mercel.vubangsi@aiiot.website" style="color:#6b0b5d"> mercel.vubangsi@aiiot.website </a> </spann>  to get payment information.
     </i>
     
     
