"corrected contact email address"

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ margin:0% 3%;
 <i id="loading" class="material-icons">autorenew</i>
   Submission Link</h2><br>
 <span style="margin-left: 2%;" > <a href="pages/submission.html" target="blank" style="text-decoration: none;"><p style="color:#666;font-family: Arial, Helvetica, sans-serif;margin-left: 1%;"> Electronic Submission System</p> </a></span><br><br>
-<span style="margin-left: 1%;"><i style="color:#666;font-family: Arial, Helvetica, sans-serif;"><i class="fa fa-envelope-o skew-shake-y" aria-hidden="true">  </i> <a href="mailto:mercel.vubangsi@aiiot.website" style="color:#666;text-decoration: none;"> Email</a> </i>  </span>
+<span style="margin-left: 1%;"><i style="color:#666;font-family: Arial, Helvetica, sans-serif;"><i class="fa fa-envelope-o skew-shake-y" aria-hidden="true">  </i> <a href="mailto:mercel.vubangsi@outlook.cm" style="color:#666;text-decoration: none;"> Email</a> </i>  </span>
 <br><br>
 
 
