--- a/pages/contact.html
+++ b/pages/contact.html
@@ -546,7 +546,7 @@ margin:0% 3%;
           <div style="text-align: center;">
             <img src="../images/mail.jpeg" alt="STS-IoT Logo" height="50">
             <p style=" font-weight: 400;text-align: center;font-size: 24px;line-height: 54px;color: #222222;font-family: 'Tenor Sans';text-transform: capitalize;">Conference Secretary of SIOT 2023</p>
-            <span style="padding-bottom: 50px;font-family: Arial, Helvetica, sans-serif;"><i class="fa fa-envelope-o" aria-hidden="true"></i>    <a href="mailto:mercel.vubangsi@aiiot.website"> mercel.vubangsi@aiiot.website </a></span>
+            <span style="padding-bottom: 50px;font-family: Arial, Helvetica, sans-serif;"><i class="fa fa-envelope-o" aria-hidden="true"></i>    <a href="mailto:mercel.vubangsi@outlook.cm"> mercel.vubangsi@outlook.cm </a></span>
         
           
           </div>
